change:  - commit README.txt which did not commit with other changes.
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/jain-slee@5729 bf0df8d0-2c1f-0410-b170-bd30377b63dc